<resources>
    <string name="app_name">Kfueit TimeTables</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Kfueit Time Tables</string>
    <string name="nav_header_subtitle">We are Leaders of Tommorrow</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_personal">My Lectures</string>
    <string name="menu_classes">Class Wise</string>
    <string name="menu_teachers">Teacher Wise</string>
    <string name="menu_subjects">Subject Wise</string>
    <string name="menu_rooms">Room Wise</string>
    <string name="menu_info_center">Latest News</string>
    <string name="menu_settings">Settings</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <string name="toast_text_no_internet_connection">This feature Requires Internet Connection. Please make sure you have an active internet connection.</string>
    <string name="menu_free_classes">Free Classes</string>
    <string name="menu_free_teachers">Free Teachers</string>
    <string name="menu_free_rooms">Free Rooms</string>
    <string name="vc_office">Send a Complaint to VC</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="mon">M</string>
    <string name="tue">T</string>
    <string name="wed">W</string>
    <string name="thu">T</string>
    <string name="fri">F</string>
    <string name="sat">S</string>
    <string name="sun">S</string>


</resources>
